# Image-Splitter

./: .gitignore  CHANGELOG.md  README.md  build.ps1  cliff.toml  main.py  pyproject.toml
.github/workflows/: enforce_cc.yml
defunt/: LineSplitter.py  LinesImage.py
src/: AutoDraw.py  BoxesWidget.py  Components.py  ImageWidget.py  LineCalcs.py  LinesImage.py  LinesWidget.py  TranslateArea.py  Utility.py
