[project]
name = "image-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6",
    "Send2Trash",
    "Pillow",
    "numpy",
    "winshell",
    "pywin32",
    "pyinstaller",
    "cx_Freeze",
    "pytesseract",
    "translate",
    "opencv-python",
    "pyperclip",
]


[tool.ruff.lint]
select = [
    "ANN",
    "ARG",
    "B",
    "B",
    "C4",
    "C901",
    "COM",
    "D",
    "E",
    "ERA",
    "F",
    "F",
    "FIX",
    "I",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PTH",
    "Q",
    "RUF",
    "S",
    "SIM",
    "UP",
    "W",
    "W",
    "YTT",
]
fixable = ["D400"]
ignore = [
    "ANN401", # any-type type hint
    "N802",   # snake_case method names
    "S311",   # cryptography warning
    "RUF015", # next vs [0]
    "UP037",  # Allow quotes for class methods
    "D102",
    "D103",
]

[tool.ruff]
target-version = "py314"
exclude = ["build", "dist", ".venv", "__pycache__"]
line-length = 100

[tool.ty.environment]
extra-paths = [".venv"]


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pep8-naming]
ignore-names = ["*"]

[tool.cxfreeze]
executables = [
    { script = "main.py", icon = "assets/splash", target_name = "image-splitter" },
]
[tool.cxfreeze.build_exe]
build_exe = "dist"
optimize = 2
